i copied alot of files and edited the index.html...

--- a/index.html
+++ b/index.html
@@ -1,8 +1,57 @@
 <html>
+	<head>
+		<title>prototype v001</title>
+		<meta http-equiv="refresh" content="2" />
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
+		<script src="js/jquery.js"></script>
+		<script>
+			$(function(){
+				//alert('ready');
+			});
+		</script>
+	</head>
+	<body style="background-color:green;">
+				<!--Header-->
+		<div class="container">
+			<header class="nav navbar-default" style="color:gray;text-align:center;">
+				<h1>
+					<b>
+						Portail d'orientation
+					</b>
+				</h1>
+				<div class="dropdown">
+					<button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown">
+						Info
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu">
+						<li><a href="#">item 1</a></li>
+						<li><a href="#">item 2</a></li>
+						<li><a href="#">item 3</a></li>
+					</ul>
+				</div><br><br><br>
+			</header>
+				<!--Content-->
+			<div style="text-align:center;" class="">
+							<!--menu-->
+							<div class="col-sm-4 col-xs-12" style="background-color:gray">
+								menu
+							</div>
+							<!--content-->
+							<div class="col-sm-8 col-xs-12" style="background-color:white">
+								content
+							</div>
+			</div>
+				<!--Footer-->
+			<footer class="navbar-inverse" style="color:silver;text-shadow:1.5px 1.5px white;text-align:center;font-family:'Consolas';">
+				2017 copyright ©
+			</footer>
 
-<body style="color:gray;background:green;">
-<h1>hello word</h1>
-<p>hi from paragraphe..</p>
-</body>
-
+	<script src="js\bootstrap.js"></script>
+	<script src="js\bootstrap.min.js"></script>
+	<script src="js\jquery.js"></script>
+  <script src="js/bootstrap.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+		</div>
+	</body>
 </html>
