--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>prototype v001</title>
-		<meta http-equiv="refresh" content="2" />
+		<!--<meta http-equiv="refresh" content="2" />-->
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
 		<script src="js/jquery.js"></script>
 		<script>
