--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
 		<meta http-equiv="refresh" content="2" />
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
 		<script src="js/jquery.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 		<script src="js/js2.js"></script>
 		<script>
 			$(function(){
 				//alert('ready');
 			});
 		</script>
+		<style>
+			a{color:gray;}
+			.MyMenu{
+				color:gray;
+				background-color:darkblue;
+			}
+			.MyMenu:Hover{
+				color:gray;
+				background-color:white;
+				/*box-shadow:2px 0px 5px orange;*/
+			}
+		</style>
 	</head>
 	<body style="background-color:green;">
 				<!--Header-->
@@ -24,24 +37,75 @@
 				<!--Content-->
 			<div style="text-align:center;" class="">
 							<!--menu-->
-							<div class="col-sm-4 col-xs-12" style="background-color:gray">
-								menu
+							<div class="col-sm-2 col-xs-12" style="background-color:gray;padding-left:0px;padding-right:0px;">
+								<div class="col-sm-12 col-xs-12">menu</div>
+								<div class="col-sm-12 col-xs-4 MyMenu">
+									<div class="dropdown">
+									<a style="text-decoration:none;" class="dropdown-toggle " data-toggle="dropdown">item 1</a>
+										<ul class="dropdown-menu dropdown-menu-left">
+											<li role="presentation"><a role="menuitem" tabindex="-1">coco</a></li>
+											<li><a href="#">Home</a></li>
+											<li><a href="#">page 2</a></li>
+											<li><a href="#">page 3</a></li>
+										</ul>
+									</div>
+								</div>
+								<div class="col-sm-12 col-xs-4 MyMenu">item 2</div>
+								<div class="col-sm-12 col-xs-4 MyMenu">item 3</div>
 							</div>
 							<!--content-->
-							<div class="col-sm-8 col-xs-12" style="background-color:white">
-								content
+							<div class="col-sm-10 col-xs-12" style="background-color:white">
+								content <br>
+								<div class="">
+								  <h2>Portail d'Orientation</h2>
+								  <p><strong>Info:</strong> The <strong>data-parent</strong> attribute makes sure that all collapsible elements under the specified parent will be closed when one of the collapsible item is shown.</p>
+								  <div class="panel-group" id="accordion">
+								    <div class="panel panel-default">
+								      <div class="panel-heading">
+								        <h4 class="panel-title">
+								          <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Domaine</a>
+								        </h4>
+								      </div>
+								      <div id="collapse1" class="panel-collapse collapse in">
+								        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+								        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+								        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+								      </div>
+								    </div>
+								    <div class="panel panel-default">
+								      <div class="panel-heading">
+								        <h4 class="panel-title">
+								          <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Metier</a>
+								        </h4>
+								      </div>
+								      <div id="collapse2" class="panel-collapse collapse">
+								        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+								        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+								        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+								      </div>
+								    </div>
+								    <div class="panel panel-default">
+								      <div class="panel-heading">
+								        <h4 class="panel-title">
+								          <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">Ecole</a>
+								        </h4>
+								      </div>
+								      <div id="collapse3" class="panel-collapse collapse">
+								        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+								        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+								        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+								      </div>
+								    </div>
+								  </div> 
+								</div>
+    
+
 							</div>
 			</div>
 				<!--Footer-->
 			<footer class="navbar-inverse" style="color:silver;text-shadow:1.5px 1.5px white;text-align:center;font-family:'Consolas';">
 				2017 copyright ©
 			</footer>
-
-	<script src="js\bootstrap.js"></script>
-	<script src="js\bootstrap.min.js"></script>
-	<script src="js\jquery.js"></script>
-  <script src="js/bootstrap.js"></script>
-  <script src="js/bootstrap.min.js"></script>
 		</div>
 	</body>
 </html>
