--- a/index.html
+++ b/index.html
@@ -17,30 +17,35 @@
 	<body style="background-color:green;">
 				<!--Header-->
 		<div class="container">
-			<header style="" class="" style="color:gray;text-align:center;padding:0px;">
-				<h1 style="background-color:yellow;margin:0px;padding:15px 10px 10px 10px;">
-					<b>
+			<header style="background-color:darkgreen;" class="col-sm-12 col-xs-12 col-md-12 col-lg-12" style="color:gray;text-align:center;padding:0px;">
+				<h1 class="" style="background-color:yellow;margin:0px;padding:15px 10px 10px 10px;">
+					<b class="visible-xs-hidden">
 						Portail d'orientation
 					</b>
 				</h1>
-				this is a test
-				**************************************************************************
+				<div class="container col-sm-12 col-xs-12 col-md-12 col-lg-12">
+					<div class="w3-content w3-display-container" style="max-width:800px;max-height:300px;">
+							  <img class="mySlides" src="img/img1.jpg" style="width:100%;height:100%;">
+							  <img class="mySlides" src="img/img2.jpg" style="width:100%;height:100%;">
+							  <img class="mySlides" src="img/img3.jpg" style="width:100%;height:100%;">
+							  <img class="mySlides" src="img/img4.jpg" style="width:100%;height:100%;">
+							  <img class="mySlides" src="img/img5.jpg" style="width:100%;height:100%;">
+							  <img class="mySlides" src="img/img6.jpg" style="width:100%;height:100%;">
+							  <img class="mySlides" src="img/img7.jpg" style="width:100%;height:100%;">
+					  <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%;background-color:rgba(37, 39, 64, 0.54);box-shadow:2px 2px 5px black">
+					    <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
+					    <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+					    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+					    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+					    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+					    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(4)"></span>
+					    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(5)"></span>
+					    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(6)"></span>
+					    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(7)"></span>
+					  </div>
+					</div>
+				</div>
 
-
-	<div class="w3-content w3-display-container" style="max-width:800px;max-height:300px;">
-			  <img class="mySlides" src="img/img1.jpg" style="width:100%;height:100%;">
-			  <img class="mySlides" src="img/img2.jpg" style="width:100%;height:100%;">
-			  <img class="mySlides" src="img/img3.jpg" style="width:100%;height:100%;">
-	  <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%;background-color:rgba(37, 39, 64, 0.54);box-shadow:2px 2px 10px rgba(24, 66, 75, 0.85);">
-	    <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
-	    <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
-	    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
-	    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
-	    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
-	  </div>
-	</div>
-
-				**************************************************************************
 			</header>
 				<!-- menu + content -->
 			<div style="text-align:center;" class="">
@@ -118,7 +123,7 @@
 
 	<script>
 		//var myIndex = 0;//this one is for the auto slide
-		var myIndex = 1;
+		var myIndex = 0;
 		showDivs(myIndex);
 
 		function plusDivs(n) {
@@ -150,13 +155,18 @@
 		function carousel() {
 		    var i;
 		    var x = document.getElementsByClassName("mySlides");
-		    for (i = 0; i < x.length; i++) {
-		       x[i].style.display = "none";  
-		    }
-		    myIndex++;
-		    if (myIndex > x.length) {myIndex = 1;}    
-		    x[myIndex-1].style.display = "block";  
-		    setTimeout(carousel, 4000); // Change image every 3 seconds
+			var dots = document.getElementsByClassName("demo");
+			for (i = 0; i < x.length; i++) {
+			    x[i].style.display = "none";  
+			}
+			for (i = 0; i < dots.length; i++) {
+			    dots[i].className = dots[i].className.replace(" w3-white", "");
+			}
+			myIndex++;
+			if (myIndex > x.length) {myIndex = 1;}    
+			x[myIndex-1].style.display = "block";  
+			dots[myIndex-1].className += " w3-white";
+		    setTimeout(carousel, 5000); // Change image every 3 seconds
 		}
 	</script>
 	</body>
