--- a/logUp-popup.html
+++ b/logUp-popup.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="css/bootstrap.min.css">
 <style>
 /* Full-width input fields */
 input[type=text], input[type=password] {
@@ -30,14 +29,50 @@ button {
 }
 
 /* Float cancel and signup buttons and add an equal width */
-.cancelbtn,.signupbtn {
-    float: left;
-    width: 50%;
-}
+.cancelbtn,.signupbtn {float:left;width:50%}
 
 /* Add padding to container elements */
 .container {
     padding: 16px;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button (x) */
+.close {
+    position: absolute;
+    right: 35px;
+    top: 15px;
+    color: #000;
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: red;
+    cursor: pointer;
 }
 
 /* Clear floats */
@@ -56,11 +91,14 @@ button {
 </style>
 <body>
 
-<h2>Signup Form</h2>
+<h2>Modal Signup Form</h2>
 
-<form class="container" style="border:1px solid #ccc">
-  <div class="container col-lg-6 col-md-6 col-sm-10 col-xs-10" style="padding:0px auto;">
-  <!-- ********************* Fields ********************* -->
+<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Sign Up</button>
+
+<div id="id01" class="modal">
+  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+  <form class="modal-content animate" action="/action_page.php">
+    <div class="container">
 
     <label for="fname"><b>First Name</b></label>
     <input id="fname" type="text" placeholder="Enter Your First Name" name="fname" required>
@@ -93,12 +131,25 @@ button {
     <input id="checkbox" type="checkbox" checked="checked"> <label for="checkbox">Remember me</label>
     <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
 
-    <div class="clearfix">
-      <button type="button" class="cancelbtn">Cancel</button>
-      <button type="submit" class="signupbtn">Sign Up</button>
+      <div class="clearfix">
+        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+        <button type="submit" class="signupbtn">Sign Up</button>
+      </div>
     </div>
-  </div>
-</form>
+  </form>
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById('id01');
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+</script>
 
 </body>
 </html>
