--- a/index.html
+++ b/index.html
@@ -12,9 +12,34 @@
 			.mySlides {display:none}
 			.w3-left, .w3-right, .w3-badge {cursor:pointer}
 			.w3-badge {height:13px;width:13px;padding:0}
-		</style>
+	/*this webSite is under construction, please live hhh*/
+	#overlay {
+	    position: fixed;
+	    display: none;
+	    width: 100%;
+	    height: 100%;
+	    top: 0;
+	    left: 0;
+	    right: 0;
+	    bottom: 0;
+	    background-color: rgba(0,0,0,0.5);
+	    z-index: 2;
+	    cursor: pointer;
+	}
+	#overlay img{
+	    position: fixed;
+	    z-index:0;
+	    width:100%;
+	    height:100%;
+	}
+	</style>
+	<!-- this is the end of the message up there-->
+
 	</head>
 	<body style="background-color:green;">
+	<!-- this is the under constraction display part hh-->
+	<div id="overlay" onclick="on()"><img src="website_under_construction1-1 (1).gif" alt=""></div>
+	<!-- this is the segend message end-->
 				<!--Header-->
 		<div class="container">
 			<header style="background-color:darkgreen;" class="col-sm-12 col-xs-12 col-md-12 col-lg-12" style="color:gray;text-align:center;padding:0px;">
@@ -122,6 +147,9 @@
 
 
 	<script>
+	$(function(){
+		on();
+	})
 		//var myIndex = 0;//this one is for the auto slide
 		var myIndex = 0;
 		showDivs(myIndex);
@@ -168,6 +196,15 @@
 			dots[myIndex-1].className += " w3-white";
 		    setTimeout(carousel, 5000); // Change image every 3 seconds
 		}
-	</script>
+	//this is the last under constraction lines of code.	
+		function on() {
+		    document.getElementById("overlay").style.display = "block";
+		}
+
+		function off() {
+		    document.getElementById("overlay").style.display = "none";
+		}
+	//the end
+		</script>
 	</body>
 </html>
