--- a/Lists/ItemsList.html
+++ b/Lists/ItemsList.html
@@ -9,6 +9,7 @@
 		<script src="js/data.js"></script>
 		<script>
 			$(function(){
+				$('.container').append(ShowAll_v002());
 			});
 		</script>
 		<style>
@@ -58,5 +59,9 @@
 				</div>
 			</div>
 		</div>
+
+
+
+
 	</body>
 </html>
