--- a/Lists/Description.html
+++ b/Lists/Description.html
@@ -13,31 +13,25 @@
 		});
 	</script>
 </head>
-<body style="background-color:#555;margin:0px;padding:0px;padding-bottom:100px;">
+<body style="background-color:#555;margin:0px;padding:0px;">
 <div class="container">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="background-color:gray;max-height:550px;margin:0px;margin-top:10px;padding:0px;margin-bottom:0px;">
 				<img src="img/img1.jpg" height="100%" width="100%" alt=""/>
 			</div>
 	
 			<div  style="background-color:gray;margin:0;padding:0;height:250px;" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
-				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="background-color:seagreen;height:100%;margin:0px;padding:10px 20px;overflow:hidden;">
-				<div style="background-color:white;height:100%;margin:0px;padding:10px 20px;box-shadow:-1pc -1px 100px black;">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="background-color:white;height:100%;margin:0px;padding:10px 20px;box-shadow:10px 10px 10px black;">
+				
 				<p><b>Name : </b>theSchoolName</p>
 				<p><b>Phone Number : </b>+021215648979</p>
-				<p><b>Adress : </b>somewhere 13 street</p>
-				<p><b>WebAdress : </b><a href="#">lucky@this.cool</a></p>
+				<p><b>Adress : </b>somewhere 41 street</p>
+				<p><b>WebAdress : </b><a href="#">this@test.cool</a></p>
 				<p><b>Type : </b>public</p>
 				<p><b>City : </b>cityName</p>
-					
-				</div>
 				</div>
 
-				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="color:white;background-color:seagreen;height:100%;padding:10px 20px;overflow:hidden;">
-					<div style="color:white;background-color:green;height:100%;padding:10px 20px;box-shadow:-1pc -1px 100px black;">
-						<p><b style="color:#222">This is the description of this Item : </b><br/>&nbsp;This is the description of this item,this is the description of this item,this is the description of this item,this is the description of this item. <br/>
-						&nbsp;This is the description of this item,this is the description of this item,this is the description of this item,thon of this item,this is the description of this item.</p>
-					</div>
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="color:white;background-color:green;height:100%;padding:20px 25px;">
+					<p><b>This is the description of this item: </b><br/>this is the description of this item,this is the description of this item This is the description of this item This is the description of this itemThis is the description of this item,this is the description of this item,this is the description of this item.</p>
 				</div>
 			</div>
 </div>
