--- a/Lists/test.html
+++ b/Lists/test.html
@@ -18,8 +18,8 @@ body {font-family: Verdana,sans-serif;margin:0}
   margin: auto;
 }
 
-/* Next & previous buttons */
-.prev, .next {
+/* btnNext & btnPrevious buttons */
+.btnPrev, .btnNext {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -33,14 +33,14 @@ body {font-family: Verdana,sans-serif;margin:0}
   border-radius: 0 3px 3px 0;
 }
 
-/* Position the "next button" to the right */
-.next {
+/* Position the "btnNext button" to the right */
+.btnNext {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
+.btnPrev:hover, .btnNext:hover {
   background-color: rgba(0,0,0,0.8);
 }
 
@@ -76,12 +76,12 @@ body {font-family: Verdana,sans-serif;margin:0}
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.activeDot, .dot:hover {
   background-color: #717171;
 }
 
 /* Fading animation */
-.fade {
+.fadeA {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
   animation-name: fade;
@@ -100,33 +100,33 @@ body {font-family: Verdana,sans-serif;margin:0}
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
+  .btnPrev, .btnNext,.text {font-size: 11px}
 }
 </style>
 </head>
 <body style="background-color:#555;margin:0px;padding:0px;padding-bottom:100px;">
 <div class="slideshow-container">
 
-<div class="mySlides fade">
+<div class="mySlides fadeA">
   <div class="numbertext">1 / 3</div>
   <img src="img/img1.jpg" style="width:100%;max-height:300px;">
   <div class="text">Caption Text</div>
 </div>
 
-<div class="mySlides fade">
+<div class="mySlides fadeA">
   <div class="numbertext">2 / 3</div>
   <img src="img/img2.jpg" style="width:100%;max-height:300px;">
   <div class="text">Caption Two</div>
 </div>
 
-<div class="mySlides fade">
+<div class="mySlides fadeA">
   <div class="numbertext">3 / 3</div>
   <img src="img/img3.jpg" style="width:100%;max-height:300px;">
   <div class="text">Caption Three</div>
 </div>
 
-<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-<a class="next" onclick="plusSlides(1)">&#10095;</a>
+<a class="btnPrev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="btnNext" onclick="plusSlides(1)">&#10095;</a>
 
 </div>
 <br>
@@ -167,7 +167,7 @@ body {font-family: Verdana,sans-serif;margin:0}
       </div>
 </div>
     
-    
+
 <script>
 var slideIndex = 1;
 showSlides(slideIndex);
@@ -190,10 +190,10 @@ function showSlides(n) {
       slides[i].style.display = "none";  
   }
   for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
+      dots[i].className = dots[i].className.replace(" activeDot", "");
   }
   slides[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " active";
+  dots[slideIndex-1].className += " activeDot";
 }
 </script>
 </body>
