--- a/Lists/test2.html
+++ b/Lists/test2.html
@@ -136,7 +136,7 @@ body {font-family: Verdana,sans-serif;margin:0}
         </div>
         <br>
 
-        <div style="text-align:center">
+        <div style="text-align:center;background-color: #555;">
           <span class="dot" onclick="currentSlide(1)"></span> 
           <span class="dot" onclick="currentSlide(2)"></span> 
           <span class="dot" onclick="currentSlide(3)"></span> 
@@ -147,7 +147,7 @@ body {font-family: Verdana,sans-serif;margin:0}
   
       <div  style="background-color:gray;margin:0;padding:0;height:250px;" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="background-color:seagreen;height:100%;margin:0px;padding:10px 20px;overflow:hidden;">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="background-color:#555;height:100%;margin:0px;padding:10px 20px;overflow:hidden;">
         <div style="background-color:white;height:100%;margin:0px;padding:10px 20px;box-shadow:-1pc -1px 100px black;">
         <p><b>Name : </b>theSchoolName</p>
         <p><b>Phone Number : </b>+021215648979</p>
@@ -159,7 +159,7 @@ body {font-family: Verdana,sans-serif;margin:0}
         </div>
         </div>
 
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="color:white;background-color:seagreen;height:100%;padding:10px 20px;overflow:hidden;">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="color:white;background-color:#555;height:100%;padding:10px 20px;overflow:hidden;">
           <div style="color:white;background-color:green;height:100%;padding:10px 20px;box-shadow:-1pc -1px 100px black;">
             <p><b style="color:#222">This is the description of this Item : </b><br/>&nbsp;This is the description of this item,this is the description of this item,this is the description of this item,this is the description of this item. <br/>
             &nbsp;This is the description of this item,this is the description of this item,this is the description of this item,thon of this item,this is the description of this item.</p>
